--- a/package.json
+++ b/package.json
@@ -20,49 +20,49 @@
   "dependencies": {
     "@corvu/drawer": "^0.2.2",
     "@corvu/resizable": "^0.2.3",
-    "@faker-js/faker": "^9.0.3",
-    "@fontsource-variable/inter": "^5.0.20",
-    "@fontsource-variable/roboto-mono": "^5.0.19",
+    "@faker-js/faker": "^9.4.0",
+    "@fontsource-variable/inter": "^5.1.1",
+    "@fontsource-variable/roboto-mono": "^5.1.1",
     "@kobalte/core": "^0.13.7",
     "@material-design-icons/svg": "^0.14.13",
     "@material-symbols/svg-400": "^0.24.0",
     "@material-symbols/svg-700": "^0.24.0",
-    "@solid-primitives/date": "^2.0.24",
-    "@solid-primitives/i18n": "^2.1.1",
-    "@solid-primitives/permission": "^1.2.6",
-    "@solid-primitives/resize-observer": "^2.0.26",
-    "@solid-primitives/storage": "^4.2.1",
+    "@solid-primitives/date": "^2.1.0",
+    "@solid-primitives/i18n": "^2.2.0",
+    "@solid-primitives/permission": "^1.3.0",
+    "@solid-primitives/resize-observer": "^2.1.0",
+    "@solid-primitives/storage": "4.2.1",
     "@solidjs/meta": "^0.29.4",
-    "@solidjs/router": "^0.15.1",
+    "@solidjs/router": "^0.15.3",
     "@tanstack/solid-table": "^8.20.5",
     "autoprefixer": "^10.4.20",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk-solid": "^1.1.0",
+    "cmdk-solid": "^1.1.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "fflate": "^0.8.2",
-    "firebase": "^10.13.2",
+    "firebase": "^10.14.1",
     "photoswipe": "^5.4.4",
     "photoswipe-video-plugin": "^1.0.2",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.1",
     "qrcode": "^1.5.4",
-    "solid-js": "^1.9.3",
+    "solid-js": "^1.9.4",
     "solid-sonner": "^0.2.8",
-    "tailwind-merge": "^2.5.5",
-    "uuid": "^11.0.3",
-    "workbox-cacheable-response": "^7.1.0",
+    "tailwind-merge": "^2.6.0",
+    "uuid": "^11.0.5",
+    "workbox-cacheable-response": "^7.3.0",
     "workbox-core": "^7.3.0",
-    "workbox-expiration": "^7.1.0",
-    "workbox-precaching": "^7.1.0",
-    "workbox-routing": "^7.1.0",
-    "workbox-strategies": "^7.1.0",
-    "workbox-window": "^7.1.0"
+    "workbox-expiration": "^7.3.0",
+    "workbox-precaching": "^7.3.0",
+    "workbox-routing": "^7.3.0",
+    "workbox-strategies": "^7.3.0",
+    "workbox-window": "^7.3.0"
   },
   "devDependencies": {
-    "@solidjs/testing-library": "^0.8.9",
-    "@testing-library/jest-dom": "^6.5.0",
-    "@testing-library/user-event": "^14.5.2",
+    "@solidjs/testing-library": "^0.8.10",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/user-event": "^14.6.1",
     "@types/crypto-js": "^4.2.2",
     "@types/pako": "^2.0.3",
     "@types/qrcode": "^1.5.5",
@@ -70,18 +70,18 @@
     "@types/uuid": "^10.0.0",
     "@types/wicg-file-system-access": "^2023.10.5",
     "@vite-pwa/assets-generator": "^0.2.6",
-    "jsdom": "^25.0.0",
-    "prettier-plugin-classnames": "^0.7.2",
-    "prettier-plugin-merge": "^0.7.1",
-    "prettier-plugin-tailwindcss": "^0.6.6",
+    "jsdom": "^25.0.1",
+    "prettier-plugin-classnames": "^0.7.5",
+    "prettier-plugin-merge": "^0.7.2",
+    "prettier-plugin-tailwindcss": "^0.6.10",
     "tailwind-scrollbar": "^3.1.0",
-    "tailwindcss": "^3.4.15",
+    "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
-    "vite": "^5.4.11",
-    "vite-plugin-compression2": "^1.3.1",
-    "vite-plugin-pwa": "^0.21.0",
-    "vite-plugin-solid": "^2.10.2",
+    "vite": "^5.4.14",
+    "vite-plugin-compression2": "^1.3.3",
+    "vite-plugin-pwa": "^0.21.1",
+    "vite-plugin-solid": "^2.11.0",
     "vite-plugin-solid-svg": "^0.8.1",
-    "vitest": "^2.1.5"
+    "vitest": "^2.1.8"
   }
 }
